[package]
name = "devly"
version = "0.1.0"
edition = "2021"
authors = ["USpiri <urielspiridione135@gmail.com>"]
description = "DevTool cli for developers"
license = "GPL-3.0"
homepage = "https://github.com/USpiri"
# build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.5"
toml = "0.7.3"
serde = { version = "1.0", features = ["derive"] }

[dependencies.inquire]
version = "0.6.0"

[dependencies.clap]
version = "4.1.11"
features = ["derive"]